force-app/main/default/objects/EFPIO__EventLog__c/EFPIO__EventLog__c.object-meta.xml
<CustomObject>
    <description>Orchestration Event</description>
    <label>Orchestration Event Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>