force-app/main/default/objects/EFPIO__EventLog__c/fields/EFPIO__Details__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__Details__c</fullName>
    <label>Event Messages</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>