force-app/main/default/objects/EFPIO__EventLog__c/fields/EFPIO__FullyQualifiedClassName__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__FullyQualifiedClassName__c</fullName>
    <description>Fully Qualified Class Name (including Namespace if applicable) containing the Execute method to Call</description>
    <label>Fully Qualified Class Name w/ Namespace</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>