force-app/main/default/objects/EFPIO__EventLog__c/fields/EFPIO__Parent_EventLog__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__Parent_EventLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Parent Orchestration Event Log object. If this is set, this is a child event.</description>
    <label>Parent Event Log</label>
    <referenceTo>EFPIO__EventLog__c</referenceTo>
    <relationshipLabel>Parent Orchestration Event Log</relationshipLabel>
    <relationshipName>EventLog</relationshipName>
    <type>Lookup</type>
</CustomField>