force-app/main/default/objects/EFPIO__EventLog__c/fields/EFPIO__Registry__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__Registry__c</fullName>
    <description>Associated Package Registry</description>
    <label>Associated Package Registry</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>