force-app/main/default/objects/EFPIO__EventLog__c/fields/EFPIO__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__Timestamp__c</fullName>
    <label>Timestamp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>