force-app/main/default/objects/EFPIO__EventLog__c/fields/EFPIO__TransactionLog__c.field-meta.xml
<CustomField>
    <fullName>EFPIO__TransactionLog__c</fullName>
    <description>Transaction Log External Id if applicable</description>
    <label>TransactionLogEID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>